<resources>

    <string-array name="date_options_arr">
        <item>All</item>
        <item>Single</item>
        <item>Range</item>
    </string-array>

    <string-array name="branch_options_arr">
        <item>All</item>
        <item>Specific</item>
    </string-array>

    <string-array name="feedback_options_arr">
        <item>All</item>
        <item>Positive</item>
        <item>Negative</item>
    </string-array>

    <string-array name="shift_options_arr">
        <item><i>Select</i></item>
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Night</item>
    </string-array>

    <string name="app_name">FeedBack Admin</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="dash_b">Dashboard</string>
    <string name="branch_name_in_lbl">Branch Name</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="new_pass">New Password</string>
    <string name="entp_name_in_lbl">Company Name</string>
    <string name="loading_lbl">Loading…</string>
    <string name="settings_lbl">Settings</string>
    <string name="report_lbl">Reports</string>
    <string name="logout">Logout</string>
    <string name="date_lbl">Date</string>
    <string name="start_date_lbl">Start Date</string>
    <string name="end_date_lbl">End Date</string>
    <string name="branch_lbl">Branch</string>
    <string name="feedback_lbl">Feedback</string>
    <string name="search_lbl">Search</string>
    <string name="account_lbl">Account</string>
    <string name="team_name_lbl">Team name</string>
    <string name="add_team_lbl">Add Team</string>
    <string name="team_shifts_lbl">Team Shifts</string>
    <string name="branches_list">Branches List</string>
    <string name="survey_questions_lbl">Survey Questions</string>
</resources>
