<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Dashboard">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:src="@drawable/feedback_logo"
        app:layout_constraintBottom_toTopOf="@id/bt_dash_report"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Reports button-->
    <Button
        android:onClick="Click_listener"
        android:id="@+id/bt_dash_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/app_button_background"
        android:drawableStart="@drawable/ic_show_chart_white_24dp"
        android:paddingStart="@dimen/margin_large"
        android:paddingEnd="@dimen/margin_tiny"
        android:text="@string/report_lbl"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/bt_dash_settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <!--Settings button-->
    <Button
        android:onClick="Click_listener"
        android:id="@+id/bt_dash_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/app_button_background"
        android:drawableStart="@drawable/ic_settings_white_24dp"
        android:paddingStart="@dimen/margin_large"
        android:paddingEnd="@dimen/margin_tiny"
        android:text="@string/settings_lbl"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Settings button-->
    <Button
        android:drawableEnd="@drawable/ic_more_vert_white_24dp"
        android:onClick="Click_listener"
        android:id="@+id/bt_dash_duty_roster"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/app_button_background"
        android:drawableStart="@drawable/ic_date_range_white_24dp"
        android:paddingStart="@dimen/margin_large"
        android:paddingEnd="@dimen/margin_tiny"
        android:text="@string/duty_rosters_lbl"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_dash_settings" />

    <!--Logout button-->
    <Button
        android:onClick="Click_listener"
        android:id="@+id/bt_dash_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/app_button_background"
        android:drawableStart="@drawable/ic_exit_to_app_white_24dp"
        android:paddingStart="@dimen/margin_small"
        android:paddingEnd="@dimen/margin_tiny"
        android:text="@string/logout"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</android.support.constraint.ConstraintLayout>