<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_add_team"
        app:contentPadding="@dimen/margin_tiny"
        app:cardElevation="@dimen/margin_tiny"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Team name-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_frag_teamname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_frag_teamname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/team_name_lbl"
                    android:textSize="@dimen/normal_text" />

            </android.support.design.widget.TextInputLayout>

            <!--Start date-->
            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/margin_tiny"
                android:id="@+id/input_frag_team_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/input_frag_team_end"
                app:layout_constraintTop_toBottomOf="@id/input_frag_teamname">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_frag_teamstart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_date_lbl"
                    android:textSize="@dimen/normal_text" />

            </android.support.design.widget.TextInputLayout>

            <!--End date-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_frag_team_end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/input_frag_team_start"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/input_frag_team_start"
                app:layout_constraintTop_toTopOf="@id/input_frag_team_start">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_frag_team_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/end_date_lbl"
                    android:textSize="@dimen/normal_text" />

            </android.support.design.widget.TextInputLayout>

            <!--Shift-->
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sp_shift_options"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:entries="@array/shift_options_arr"
                android:layout_marginTop="@dimen/margin_tiny"
                app:layout_constraintTop_toBottomOf="@id/input_frag_team_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/bt_add_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/app_button_background"
                android:text="@string/add_team_lbl"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/sp_shift_options"
                />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recy_add_team"
        android:layout_marginTop="@dimen/margin_tiny"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_add_team"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

</android.support.constraint.ConstraintLayout>