<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CompDetails_activity">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/margin_small"
        app:cardElevation="@dimen/margin_tiny"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_tiny">

            <ImageView
                android:layout_marginBottom="@dimen/margin_tiny"
                android:src="@drawable/feedback_logo"
                android:layout_marginTop="@dimen/margin_tiny"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <!--Enterprise name input-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_reg_entp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_tiny">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_reg_entp"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/entp_name_in_lbl"
                    android:inputType="text"
                    android:longClickable="false"
                    android:textSize="@dimen/normal_text" />

            </android.support.design.widget.TextInputLayout>

            <!--Branch name input-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_reg_bn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_tiny">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_reg_bn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/branch_name_in_lbl"
                    android:inputType="text"
                    android:textSize="@dimen/normal_text" />

            </android.support.design.widget.TextInputLayout>

            <!--New password input-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_reg_npass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_tiny"
                android:padding="@dimen/margin_tiny"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_reg_npass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="15"
                    android:hint="@string/new_pass"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/normal_text" />

            </android.support.design.widget.TextInputLayout>

            <!--Confirm password input-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_reg_conf_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_tiny"
                android:padding="@dimen/margin_tiny">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_reg_conf_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="15"
                    android:hint="@string/conf_pass"
                    android:inputType="textPassword"
                    android:textSize="@dimen/normal_text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_tiny"
                android:onClick="VerifyInfo"
                android:src="@drawable/ic_arrow_forward_white_24dp"
                app:backgroundTint="@color/colorPrimaryDark" />


        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>